# potentiostat_nomad_camels

./: DEVELOPER_MANUAL.md  README.md  USER_MANUAL.md  positions.txt  pyproject.toml
Potentiostat/: README.md  pyproject.toml
Potentiostat/nomad_camels_driver_Potentiostat/: Potentiostat.py  Potentiostat_ophyd.py  potentiostat_backend.py  potstat.py  test.py
Testdriver/: README.md  pyproject.toml
Testdriver/nomad_camels_driver_Testdriver/: Testdriver.py  Testdriver_ophyd.py
potentiostat_new_max/: potentiostat.py
protocols/: CVMeasurement.cprot  CVMeasurement.py  CVMeasurementLoop.cprot  CVMeasurementLoop.py  CVMeasurement_noclean.cprot  CVMeasurement_noclean.py  SamplePosLoop.cprot  SamplePosLoop.py  TestmoveProtocol.cprot  TestmoveProtocol.py
protocols/potentiostatprotocols/: LEDProtocol.cprot  LEDProtocol.py  Protocol_CV_Real.cprot  Protocol_CV_Real.py  Protocol_CV_Stat.cprot  Protocol_CV_Stat.py
protocols/xyprotocols/: approach_sample.cprot  approach_sample.py  approach_sample_index.cprot  approach_sample_index.py  approach_sample_index_string.cprot  approach_sample_index_string.py  clean_head.cprot  clean_head.py  discard_solution.cprot  discard_solution.py  draw_solution_finalize.cprot  draw_solution_finalize.py  draw_solution_reservoir.cprot  (+7 more)
xy/: README.md  __init__.py  pointcreator  pyproject.toml
xy/nomad_camels_driver_xy/: README.md  autolab.py  head_control.py  procedure.py  pyproject.toml  serial_connection.py  state.csv  xy.py  xy_ophyd.py  xyz_stage.py
xy/nomad_camels_driver_xy/solution_mixing/: __init__.py  hardware.py  liquid_handling.py
(+1 files in other folders)
