[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xy_pec"
version = "0.1.0"
description = "Laterally resolved photo-electrochemical cell"
authors = [
  { name="Maximilian Wolf", email="maximilian.wolf@ait.ac.at" }
]
readme = "README.md"
requires-python = ">=3.8"
# license = { file = "LICENSE" }
# keywords = [""]
classifiers = [
  "Programming Language :: Python :: 3",
  # "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pyserial"
]

[project.urls]
Homepage = "https://gitlab-intern.ait.ac.at/ech-materials/xy-pec"

[tool.hatch.build.targets.wheel]
packages = ["xy_pec"]